# Travel-Agent-MVP

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
config/: theme.py
docs/: backend-frontend-contract.md  migration-guide.md
models/: state.py
services/: agent_interface.py
src/travel_agent/: __init__.py  config.py
src/travel_agent/agents/: __init__.py  analyst.py  coordinator.py  planner.py  researcher.py
src/travel_agent/graph/: __init__.py  state.py  workflow.py
src/travel_agent/knowledge/: beijing.md  chengdu.md  hangzhou.md
src/travel_agent/memory/: __init__.py  memory_manager.py  preference_store.py  user_profile.py
src/travel_agent/rag/: __init__.py  embeddings.py  loader.py  retriever.py
src/travel_agent/schemas/: __init__.py  analysis.py  common.py  plan.py  research.py  travel.py
src/travel_agent/services/: __init__.py  llm_client.py  runner.py
src/travel_agent/tools/: __init__.py  budget.py  place_search.py  registry.py  route.py  weather.py
tests/: test_agents.py  test_llm_client.py  test_memory.py  test_rag.py
ui/: input_section.py  landing_section.py  layout.py  pipeline_section.py  result_budget.py  result_map.py  result_timeline.py  result_weather.py  tool_trace_section.py  top_bar.py
